<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="story_owner">Owner</string>
    <string name="created_at">Created At</string>
    <string name="detail_story_name">Detail Story Name</string>
    <string name="story_description">Story Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="logout">Logout</string>
    <string name="attach_location">Attach Location</string>
    <string name="try_again">Try Again</string>
    <string name="timeout">Reached Timeout</string>
</resources>