<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/preview_img"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/btn_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/preview_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:cornerRadius="25dp"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:text="@string/camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_width="120dp"
                android:layout_height="60dp"
                app:cornerRadius="25dp"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:textAllCaps="false"
                android:text="@string/gallery" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_description_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:background="@drawable/edit_text_border"
                android:hint="@string/description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Upload"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            app:cornerRadius="25dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_description_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>