<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="320dp"
            android:layout_height="180dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <com.mrh.storyapp.customview.PasswordLoginCustom
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:paddingVertical="8dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

        <TextView
            android:id="@+id/tv_register_span"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_yet"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@color/gray_300"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/btn_register_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_span" />

        <Button
            android:id="@+id/btn_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingVertical="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>